[package]
name = "r1ms"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.4"
capnp = "0.16"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
uuid = { version = "1.6", features = ["v4"] }
dashmap = "5.5"
log = "0.4"
env_logger = "0.10"
governor = "0.5"
rand = "0.8"
byteorder = "1.4"
lazy_static = "1.4"
ipnetwork = "0.20"
parking_lot = "0.12"
reqwest = { version = "0.11", features = ["json"] }

[build-dependencies]
capnpc = "0.16"
